tests/rosetta/out/Zig/active-directory-connect.error
zig build: exit status 1
/tmp/active-directory-connect.zig:5:67: error: use of undeclared identifier 'handleError'
